--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ name: SnowflakeOS
 description: Locally grown blog posts, by Johan Manuel
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /assets/logo_big.png
+avatar: /assets/logo_big.jpg
 
 #
 # Flags below are optional
