--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@
 title: SnowflakeOS's blog
 
 # Name of your site (displayed in the header)
-name: SnowflakeOS
+name: jmnl.xyz
 
 # Short bio or description (displayed in the header)
-description: Locally grown blog posts, by Johan Manuel
+description: Locally grown blog posts
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /assets/logo_big.png
